Fix consent banner on smaller screens

--- a/resources/css/includes/consent.scss
+++ b/resources/css/includes/consent.scss
@@ -18,4 +18,9 @@
     & p {
         margin-bottom: 0;
     }
+
+    @include media-breakpoint-down(md) {
+        width: 100%;
+        left: 0;
+    }
 }
